--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,29 @@
+.blur{
+    z-index: 5;
+    position: fixed;
+    display: block;
+    width: 100%;
+    height: 100%;
+    
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.error{
+    width: 500px;
+    height: 250px;
+    background-color: red;
+
+    color: white;
+    text-align: center;
+
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
 /* Shrinking the sidebar from 250px to 80px and center aligining its content*/
 #sidebar.active {
     min-width: 80px;
