--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+#loading{
+    display: block;
+    width : 100px;
+    height : 100px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 150px;
+}
+
 .blur{
     z-index: 5;
     position: fixed;
