--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+#zendingen{
+    width: 100%;
+    color: white;
+}
+
+#zendingen th{
+    background-color: #9fda34;
+}
+#zendingen tr{
+    background-color: #707070;
+}
+
+#zendingen tr:nth-child(even){
+    background-color: #414141;
+}
+
 #loading{
     display: block;
     width : 100px;
