--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ a{
   cursor: pointer;
 }
 
+th{
+  user-select: none;
+}
+
 #zendingen{
     margin-left: auto;
     margin-right: auto;
@@ -56,6 +60,8 @@ a{
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
+
+
 
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap');
 
