--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ th{
     margin-right: auto;
     width: 80%;
     color: white;
+    padding: 5px 5px;
 }
 
 #zendingen th{
@@ -33,32 +34,6 @@ th{
     position: absolute;
     left: 50%;
     top: 500px;
-}
-
-.blur{
-    z-index: 5;
-    position: fixed;
-    display: block;
-    width: 100%;
-    height: 100%;
-    
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.error{
-    width: 500px;
-    height: 250px;
-    background-color: red;
-
-    color: white;
-    text-align: center;
-
-    display: block;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
 }
 
 
