--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,26 @@ th{
   user-select: none;
 }
 
+.popup{
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 100;
+}
+
+.popup-content{
+  width: 50%;
+  height: 70%;
+
+  background-color: white;
+}
+
 #zendingen{
     margin-left: auto;
     margin-right: auto;
@@ -88,7 +108,7 @@ th{
   margin: 0 auto;
   width: 15%;
   height: 15%;
-  background-color: #333;
+  background-color: #9fda34;
   border-radius: 100%;
   -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
           animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
