--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 .filterContainer{
   display: flex;
-  margin-bottom: 10px;
-  margin-top: 10px;
+  padding-bottom: 10px;
+  padding-top: 10px;
   padding: 10px;
+  background: #9fda34;
 }
 
 .filter{
@@ -315,7 +316,7 @@ body{
 .wrapper .sidebar{
   width: 200px;
   height: 100%;
-  background: #4b4276;
+  background: #414141;
   padding: 30px 0px;
   position: fixed;
 }
@@ -335,7 +336,7 @@ body{
 }    
 
 .wrapper .sidebar ul li a{
-  color: #bdb8d7;
+  color: white;
   display: block;
 }
 
