--- a/css/login.css
+++ b/css/login.css
@@ -31,8 +31,11 @@ img {
   box-sizing: border-box;
   font-size: 14px;
 }
-.form input.password {
+.form input.username {
   margin-top: 1vw;
+ }
+ .form input.password {
+  margin-top: 0.5vw;
   margin-bottom: 2vw;
  }
 .form input.myparcelkey {
