--- a/css/login.css
+++ b/css/login.css
@@ -141,7 +141,6 @@ body {
   left: 0;
   right: 0;
   background: rgba(0, 0, 0, 0.7);
-  /* transition: opacity 500ms; */
   visibility: hidden;
   opacity: 0;
 }
@@ -152,12 +151,13 @@ body {
 
 .popup {
   margin: 70px auto;
-  padding: 20px;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   background: #fff;
   border-radius: 5px;
   width: 30%;
   position: relative;
-  /* transition: all 5s ease-in-out; */
 }
 
 .popup h2 {
@@ -167,9 +167,9 @@ body {
 }
 .popup .close {
   position: absolute;
+  cursor: pointer;
   top: 20px;
   right: 30px;
-  /* transition: all 200ms; */
   font-size: 30px;
   font-weight: bold;
   text-decoration: none;
