--- a/css/login.css
+++ b/css/login.css
@@ -36,7 +36,7 @@ img {
  }
  .form input.password {
   margin-top: 0.5vw;
-  margin-bottom: 2vw;
+  margin-bottom: 0.5vw;
  }
 .form input.namecreate {
   margin-top: 1vw;
@@ -158,6 +158,20 @@ body {
   border-radius: 5px;
   width: 30%;
   position: relative;
+}
+
+.popup button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  border: 0;
+  padding: 15px;
+  border-radius: 5px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
 }
 
 .popup h2 {
