--- a/css/login.css
+++ b/css/login.css
@@ -2,8 +2,11 @@
 
 .login-page {
   width: 40%;
-  padding: 8% 0 0;
-  margin: auto;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .form {
   position: relative;
@@ -150,14 +153,17 @@ body {
 }
 
 .popup {
-  margin: 70px auto;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
   background: #fff;
   border-radius: 5px;
   width: 30%;
-  position: relative;
 }
 
 .popup button {
