--- a/css/style.css
+++ b/css/style.css
@@ -121,26 +121,6 @@ input[type=text]:focus{
   outline: none;
 }
 
-.popup{
-  position: absolute;
-  left: 0;
-  top: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.6);
-  z-index: 100;
-}
-
-.popup-content{
-  width: 50%;
-  height: 70%;
-
-  background-color: white;
-}
-
 #zendingen{
     margin-left: auto;
     margin-right: auto;
@@ -424,6 +404,18 @@ body{
 }
 
 /* Popup */
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+
+.login-page {
+  width: 40%;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Popup */
 .overlay {
   z-index: 100;
   position: fixed;
@@ -441,14 +433,17 @@ body{
 }
 
 .popup {
-  margin: 70px auto;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
   background: #fff;
   border-radius: 5px;
   width: 30%;
-  position: relative;
 }
 
 .popup button {
@@ -486,4 +481,13 @@ body{
 .popup .content {
   max-height: 30%;
   overflow: auto;
+}
+
+@media screen and (max-width: 700px){
+  .box{
+    width: 70%;
+  }
+  .popup{
+    width: 70%;
+  }
 }
