--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,9 @@
   z-index: 1;
   background: #FFFFFF;
   width: 100%;
-  height: auto;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  padding-bottom: 50px;
 }
 
 .form input {
@@ -30,7 +30,7 @@
   outline: 0;
   background: #f2f2f2;
   width: 80%;
-  height: 8%;
+  height: 40px;
   border: 0;
   margin: 0 0 15px;
   padding: 15px;
@@ -73,7 +73,6 @@
   outline: 0;
   background: #4CAF50;
   width: 100%;
-  height: 8%;
   border: 0;
   padding: 15px;
   color: #FFFFFF;
@@ -81,6 +80,9 @@
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 .form button:hover,.form button:active,.form button:focus {
   background: #43A047;
