--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,14 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.inputmid {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .form {
   position: relative;
   z-index: 1;
@@ -134,7 +142,7 @@
 }
 
 .knopjes button {
-  width: 20%;
+  /* width: 20%;
   margin: 1%;
   display: inline-block;
   border: 0.16em solid rgba(255, 255, 255, 0);
@@ -143,11 +151,26 @@
   text-decoration: none;
   text-align: center;
   transition: all 0.2s;
-  background: #c9c5c5;
+  background: #c9c5c5; */
+
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: #4CAF50;
+  width: 20%;
+  margin: 1%;
+  border: 0;
+  border-radius: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+  display: inline-block;
 }
 
 .knopjes button:hover {
-  border-color: #9fda34;
+  background: #43A047;
 }
 
 .filterContainer {
