--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,18 @@ body{
   background-color: #f0f0f0 !important; 
 }
 
+::-webkit-scrollbar{
+  width: 7px;
+}
+
+::-webkit-scrollbar-track{
+  background: #727272;
+}
+
+::-webkit-scrollbar-thumb{
+  background: #9fda34
+}
+
 ::-moz-selection {
   /* Code for Firefox */
   background: #9fda34;
